﻿-------------------------------------------------------------------------------
                             wxWidgets Change Log
-------------------------------------------------------------------------------

INCOMPATIBLE CHANGES SINCE 2.8.x
================================


        Notice that these changes are described in more details in
        the "Changes Since wxWidgets 2.8" section of the manual,
        please read it if the explanation here is too cryptic.


Unicode-related changes
-----------------------

The biggest changes in wxWidgets 3.0 are the changes due to the merge of the
old ANSI and Unicode build modes in a single build. See the Unicode overview
in the manual for more details but here are the most important incompatible
changes:

- Many wxWidgets functions taking "const wxChar *" have been changed to take
  either "const wxString&" (so that they accept both Unicode and ANSI strings;
  the argument can't be NULL anymore in this case) or "const char *" (if the
  strings are always ANSI; may still be NULL). This change is normally
  backwards compatible except:

  a) Virtual functions: derived classes versions must be modified to take
     "const wxString&" as well to make sure that they continue to override the
     base class version.

  b) Passing NULL as argument: as NULL can't be unambiguously converted to
     wxString, in many cases code using it won't compile any more and NULL
     should be replaced with an empty string.

- Functions returning "const wxChar *" were changed as well. Mostly they now
  return wxString which is then transparently convertible to either "const char
  *" or "const wchar_t *" but in some cases, notably wxDateTime::ParseXXX(),
  the returned string could be NULL and so a separate helper class is used. If
  you obtain compilation errors because of this, you can always correct them by
  explicitly assigning the function return value to a variable of wanted type.